# ROS_4_legged

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lg-robot/share/lg-robot/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lg-robot/share/lg-robot/cmake/: lg-robotConfig.cmake
install/lg-robot/share/lg-robot/urdf/: lgrobot.urdf.xacro
install/lg_robot/share/lg_robot/: package.bash  package.zsh
log/: latest_build  latest_list
src/lg-robot/: CMakeLists.txt
src/lg-robot/config/: lg_robot_controllers.yaml
src/lg-robot/launch/: gazebo.launch.py
src/lg-robot/urdf/: lgrobot.urdf.xacro
